# keepassxc

./: CMakeLists.txt
src/: CMakeLists.txt
src/connector/: AppBase.cpp  AppBase.h  CMakeLists.txt  GenericApp.cpp  GenericApp.h  GitApp.cpp  GitApp.h  ProxyApp.cpp  ProxyApp.h  keepassxc-connector.cpp
src/proxy/: keepassxc-proxy.cpp
